config/manifests/gateway/traffic_policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: high-connection-route-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: llm-route
  circuitBreaker:
    maxConnections: 40000
    maxPendingRequests: 40000
    maxParallelRequests: 40000 
  timeout:
    tcp:
      connectTimeout: 24h
